# robot_develop

./: README.md  try1.txt
install/: local_setup.sh  setup.sh
install/status_insterfaces/include/status_insterfaces/msg/detail/: system_status__type_support.hpp
install/status_insterfaces/include/status_insterfaces/status_insterfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  system_status.hpp
install/status_insterfaces/share/status_insterfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/status_insterfaces/share/status_insterfaces/cmake/: export_status_insterfaces__rosidl_generator_cExport.cmake  export_status_insterfaces__rosidl_generator_cppExport.cmake  export_status_insterfaces__rosidl_generator_pyExport-noconfig.cmake  export_status_insterfaces__rosidl_generator_pyExport.cmake  export_status_insterfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_status_insterfaces__rosidl_typesupport_fastrtps_cppExport.cmake  status_insterfacesConfig.cmake  status_insterfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  status_insterfaces__rosidl_typesupport_introspection_cExport.cmake  status_insterfaces__rosidl_typesupport_introspection_cppExport.cmake
install/status_insterfaces/share/status_insterfaces/msg/: SystemStatus.json
install/status_publisher/share/status_publisher/: package.sh  package.xml
log/: latest_build
topic_practice_ws/src/status_publisher/: setup.py
topic_practice_ws/src/stutas_insterfaces/: CMakeLists.txt  package.xml
(+6 files in other folders)
